kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: telemetry-fabric
  namespace: shield-intelligence
  labels:
    app.kubernetes.io/name: shield-pdp
    app.kubernetes.io/component: telemetry-fabric
    shield.stage: stage7
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: shield-pdp
    app.kubernetes.io/component: enterprise-core
  ports:
    - name: http
      port: 8080
      targetPort: http
